--- a/untitled1/package.json
+++ b/untitled1/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "ajv": "^6.5.4",
     "react": "^16.6.0",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
