--- a/untitled1/package.json
+++ b/untitled1/package.json
@@ -8,7 +8,8 @@
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
     "start": "react-scripts start",
